--- a/index.html
+++ b/index.html
@@ -1,35 +1,22 @@
 <!DOCTYPE html>
-<!--
-  ~    Copyright (c) 2018-2025, lengleng All rights reserved.
-  ~
-  ~ Redistribution and use in source and binary forms, with or without
-  ~ modification, are permitted provided that the following conditions are met:
-  ~
-  ~ Redistributions of source code must retain the above copyright notice,
-  ~ this list of conditions and the following disclaimer.
-  ~ Redistributions in binary form must reproduce the above copyright
-  ~ notice, this list of conditions and the following disclaimer in the
-  ~ documentation and/or other materials provided with the distribution.
-  ~ Neither the name of the pig4cloud.com developer nor the names of its
-  ~ contributors may be used to endorse or promote products derived from
-  ~ this software without specific prior written permission.
-  ~ Author: lengleng (wangiegie@gmail.com)
-  -->
-
 <html>
-
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="format-detection" content="telephone=no">
+  <meta content="all" name="robots" />
+  <meta name="Copyright" content="Portal" />
+  <meta name="keywords" content="Portal" />
+  <meta name="description" content="Portal" />
   <link rel="stylesheet" href="<%= htmlWebpackPlugin.options.path %>/cdn/element-ui/2.3.8/theme-chalk/index.css">
   <link rel="stylesheet" href="<%= htmlWebpackPlugin.options.path %>/cdn/animate/3.5.2/animate.css">
   <link rel="stylesheet" href="<%= htmlWebpackPlugin.options.path %>/cdn/iconfont/1.0.0/index.css">
-  <title>Pig 微服务快速开发框架</title>
+  <title>Portal</title>
   <link rel="manifest" href="manifest.json">
+  <link rel="shortcut icon" type="image/ico" href="static/img/favicon.ico" />
 </head>
 
 <body>
