--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="<%= htmlWebpackPlugin.options.path %>/cdn/element-ui/2.3.8/theme-chalk/index.css">
   <link rel="stylesheet" href="<%= htmlWebpackPlugin.options.path %>/cdn/animate/3.5.2/animate.css">
   <link rel="stylesheet" href="<%= htmlWebpackPlugin.options.path %>/cdn/iconfont/1.0.0/index.css">
-  <title>Portal</title>
+  <title>数赟科技</title>
   <link rel="manifest" href="manifest.json">
   <link rel="shortcut icon" type="image/ico" href="static/img/favicon.ico" />
 </head>
